[package]
name = "crypto-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "*", default-features = false }
chrono = {version = "0.4.23", features = ["serde"]}
serde = {version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
url = "2.3.1"
flate2 = "1.0.25"

futures = "0.3.21"
async-trait = "0.1.59"
tokio = { version = "1.20.1", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tungstenite = { version = "0.18.0", features = ["native-tls"] }
